tests/soundness/accept/shared_refs_ok.tr
# EXPECT: pass
# Many shared `ref` borrows of the same place coexist (read-only aliasing).
def main():
    mut x = 5
    a: ref int = x
    b: ref int = x
    print(a + b)
